# USGS-Edge-Detect

./: AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.in  edge.kdevprj  edge.kdevses  edge.lsm  mkinstalldirs
edge/: Makefile  Makefile.am  Makefile.in  cannyedgedetector.cpp  cannyedgedetector.h  edgedetector.h  lateralinhibedgedetector.cpp  lateralinhibedgedetector.cpp.ol  lateralinhibedgedetector.h  main.cpp  sobeledgedetector.cpp  sobeledgedetector.h
edge/.xvpics/: global.tif  globelsobel.tif  in.tif  in2.tif  ingrey2.tif  outgrey.tif
edge/Thinner/: Makefile  Thinner.cpp  Thinner.h  main.cpp
edge/Thinner/.xvpics/: in2.tif
edge/docs/: Makefile.in
edge/docs/en/: Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
