####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = edge
edge_SOURCES = lateralinhibedgedetector.cpp cannyedgedetector.cpp sobeledgedetector.cpp main.cpp 
edge_LDADD   = -lImageLib -ltiff

SUBDIRS = docs 

EXTRA_DIST = main.cpp edgedetector.h sobeledgedetector.cpp sobeledgedetector.h cannyedgedetector.cpp cannyedgedetector.h lateralinhibedgedetector.cpp lateralinhibedgedetector.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = edge

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
edge_LDFLAGS = $(all_libraries) 
                                                                                
